[package]
name = "obrc-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
fxhash = "0.2.1"
memchr = "2.7.2"
memmap2 = "0.9.4"
num_cpus = "1.16.0"
phf = { version = "0.11.2", features = ["macros"] }
pretty_assertions = "1.4.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0.116"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
phf_codegen = "0.11.1"

[profile.release]
debug = true

[[bench]]
name = "obrc"
harness = false

[[bench]]
name = "criterion"
harness = false
